# cpp-boilerplate

./: .clangd  .gitignore  CMakeLists.txt  Deploy.ps1  README.md
project_name/: main.cpp  main.hpp
scripts/: clean.ps1  clean.sh  generate.ps1  generate.sh  rebuild.sh
